--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "start test",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
